<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.account.SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="8dp">

        <com.example.pajelingo.ui.LabeledInput
            android:id="@+id/email_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:label="@string/email_label" />

        <com.example.pajelingo.ui.LabeledInput
            android:id="@+id/username_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:label="@string/username_label"
            android:layout_marginTop="16dp"/>

        <com.example.pajelingo.ui.LabeledInput
            android:id="@+id/password_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/username_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:label="@string/password_label"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/password_requirements_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/password_requirements_label"/>

        <com.example.pajelingo.ui.PasswordRequirement
            android:id="@+id/requirement_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_requirements_label"
            app:requirementText="@string/password_requirement_1"
            android:layout_marginTop="16dp"/>

        <com.example.pajelingo.ui.PasswordRequirement
            android:id="@+id/requirement_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requirement_1"
            app:requirementText="@string/password_requirement_2"/>

        <com.example.pajelingo.ui.PasswordRequirement
            android:id="@+id/requirement_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requirement_2"
            app:requirementText="@string/password_requirement_3"/>

        <com.example.pajelingo.ui.PasswordRequirement
            android:id="@+id/requirement_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requirement_3"
            app:requirementText="@string/password_requirement_4"/>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/requirement_4"
            android:layout_marginTop="16dp"
            android:text="@string/signup_button_text"/>

        <TextView
            android:id="@+id/login_link_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_button"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/raw_blue"
            android:text="@string/login_link"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>