<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MenuActivity">

    <com.example.pajelingo.ui.SimpleListItem
        android:id="@+id/menu_item_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/ic_profile"
        app:title="@string/profile_menu_item_title"/>

    <com.example.pajelingo.ui.SimpleListItem
        android:id="@+id/menu_item_rankings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/menu_item_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/ic_rankings"
        app:title="@string/rankings_menu_item_title"/>

    <com.example.pajelingo.ui.SimpleListItem
        android:id="@+id/menu_item_faq"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/menu_item_rankings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/ic_faq"
        app:title="@string/faq_menu_item_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>